# locusfs

./: .project.json  AGENTS.md  Cargo.toml  async.md  config.md
architecture-audit/: graph-fuse-architecture.md  host-client-plugin-api-architecture.md  plugins-architecture.md  readme.md  workspace-structure.md
fuse/: Cargo.toml
fuse/src/: error.rs  invalidation.rs  mount.rs
fuse/src/fs/: directory.rs  entry.rs  filesystem.rs  inode.rs  mod.rs  resolve.rs  test.rs  value.rs  watch.rs
fuse/src/layout/: segment.rs
fuse/tests/: fuse_smoke.rs
graph/: Cargo.toml
graph/src/: error.rs  lib.rs
graph/src/graph/: access.rs  dynamic.rs  memory.rs  mod.rs  test.rs  trace.rs
graph/src/identity/: mod.rs
graph/src/value/: kind.rs  property.rs  scalar.rs  test.rs
locusfs/: Cargo.toml
locusfs-client/: Cargo.toml
locusfs-client/src/: lib.rs  test.rs
locusfs-core/: Cargo.toml
locusfs-core/src/: error.rs  lib.rs
locusfs-core/src/graph/: mod.rs  test.rs
locusfs-core/src/identity/: mod.rs  test.rs
locusfs-core/src/layout/: mod.rs  test.rs
locusfs-core/src/value/: mod.rs  test.rs
locusfs-fuse/: Cargo.toml
locusfs-fuse/src/: error.rs  invalidation.rs  lib.rs  mount.rs  test.rs
locusfs-fuse/src/fs/: attr.rs  directory.rs  entry.rs  filesystem.rs  inode.rs  mod.rs  name.rs  resolve.rs  test.rs  value.rs  watch.rs
locusfs-fuse/src/layout/: mod.rs  test.rs
locusfs-fuse/tests/: fuse_smoke.rs
locusfs-graph/: Cargo.toml
locusfs-graph/src/: error.rs  lib.rs
locusfs-graph/src/graph/: access.rs  change.rs  dynamic.rs  memory.rs  mod.rs  test.rs  trace.rs  watch.rs
locusfs-graph/src/identity/: names.rs  node.rs  test.rs  validation.rs
locusfs-graph/src/value/: mod.rs
locusfs-plugin-api/: Cargo.toml
locusfs-plugin-api/src/: lib.rs
locusfs-watch/: Cargo.toml
locusfs-watch/src/: lib.rs  protocol.rs
locusfs-watch/src/client/: test.rs
locusfs-watch/src/protocol/: test.rs
locusfs/src/: lib.rs  main.rs  perfetto.rs  watch.rs
locusfs/src/config/: mod.rs
locusfs/src/plugin/: mod.rs
notes/notifyd/: IMPLEMENTATION.md  SPEC.md
plan/: 00-overview.md  01-runtime-and-dependencies.md  02-async-graph-contract.md  03-provider-adapters.md  04-change-streams.md  05-fuse3-mount-skeleton.md  06-fuse3-filesystem-port.md  07-watch-poll-invalidation.md  08-runtime-cli-and-plugins.md  09-test-hardening.md
plugins/api/: Cargo.toml
plugins/api/src/: lib.rs
plugins/dbus/: Cargo.toml
plugins/dbus/src/: lib.rs  provider.rs  runtime.rs  state.rs
plugins/dbus/src/config/: mod.rs
plugins/dbus/src/state/: test.rs
plugins/dbusmenu/: Cargo.toml
plugins/dbusmenu/src/: lib.rs  provider.rs  runtime.rs  state.rs  test.rs
plugins/dbusmenu/src/config/: mod.rs
plugins/mpris/: Cargo.toml
plugins/mpris/src/: lib.rs  provider.rs  runtime.rs  state.rs
plugins/niri/: Cargo.toml
plugins/niri/src/: ipc.rs  lib.rs  provider.rs  state.rs
plugins/niri/src/config/: mod.rs
plugins/niri/src/state/: test.rs
plugins/notifyd/: Cargo.toml
plugins/notifyd/src/: config.rs  image.rs  lib.rs  markup.rs  provider.rs  runtime.rs  state.rs
plugins/notifyd/src/state/: test.rs
plugins/pipewire/: Cargo.toml
plugins/pipewire/src/: lib.rs  provider.rs  runtime.rs  state.rs
plugins/pipewire/src/config/: mod.rs
plugins/project/: Cargo.toml
plugins/project/scripts/: proj
plugins/project/src/: lib.rs
plugins/project/src/config/: mod.rs
plugins/statusnotifier/: Cargo.toml
plugins/statusnotifier/src/: lib.rs  provider.rs  runtime.rs  state.rs  test.rs
refactor/: agent-dbus-family.md  agent-fuse-runtime.md  agent-graph-core.md  agent-host-plugin-api.md  agent-native-plugins.md  agent-watch-api.md  arbitration.md  fuse-client.md  graph-api.md  host-config.md  implementation-log.md  locusfs-fuse.md  locusfs-graph.md  locusfs-watch.md  locusfs.md  plugins-niri.md  plugins.md  readme.md  scripts.md
scripts/: epoll_watch.py  proj
watch/src/: client.rs  lib.rs  protocol.rs
watch/src/client/: test.rs
watch/src/protocol/: test.rs
