[workspace]
members = [
    "bin",
    "watch",
    "graph",
    "fuse",
    "plugins/api",
    "plugins/dbus",
    "plugins/niri",
    "plugins/mpris",
    "plugins/pipewire",
    "plugins/project",
]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1.89"
bytes = "1.11.1"
futures-core = "0.3.31"
futures-util = "0.3.31"
serde = "1.0"
serde_json = "1.0"
tokio = "1.48.0"
toml = "0.8"
