[package]
name = "locusfs-graph"
version = "0.1.0"
edition = "2024"

[features]
default = ["dynamic", "in-memory", "provider-tracing", "watch-provider"]
dynamic = ["dep:futures-core", "dep:futures-util", "dep:tokio", "watch-provider"]
in-memory = ["dep:tokio"]
provider-tracing = ["dep:tracing"]
watch-provider = ["dep:tokio"]

[dependencies]
async-trait = { workspace = true }
futures-core = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
thiserror = "2.0.18"
tokio = { workspace = true, features = ["rt", "sync"], optional = true }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
