[package]
name = "locusfs-watch"
version = "0.1.0"
edition = "2024"

[features]
default = ["client"]
client = ["dep:libc", "dep:tokio", "dep:tracing"]

[dependencies]
libc = { version = "0.2", optional = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "rt", "time"], optional = true }
tracing = { version = "0.1", optional = true }
