[package]
name = "locusfs"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
locusfs-client = { path = "../locusfs-client" }
locusfs-graph = { path = "../locusfs-graph" }
locusfs-fuse = { path = "../locusfs-fuse" }
locusfs-plugin-dbus = { path = "../plugins/dbus" }
locusfs-plugin-niri = { path = "../plugins/niri" }
locusfs-plugin-project = { path = "../plugins/project" }
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
