[package]
name = "locusfs"
version = "0.1.0"
edition = "2024"

[dependencies]
libloading = "0.8"
libc = "0.2"
locusfs-client = { path = "../locusfs-client" }
locusfs-graph = { path = "../locusfs-graph" }
locusfs-fuse = { path = "../locusfs-fuse" }
locusfs-plugin-api = { path = "../locusfs-plugin-api" }
perfetto-sdk = "1.0.2"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }
tracing = "0.1"
tracing-perfetto-sdk = "1.0.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
