[package]
name = "locusfs-plugin-dbus"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
locusfs-graph = { path = "../../locusfs-graph" }
locusfs-plugin-api = { path = "../../locusfs-plugin-api" }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
toml = { workspace = true }
zbus = { version = "5.16", default-features = false, features = ["tokio"] }
