[package]
name = "locusfs-plugin-niri"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
locusfs-graph = { path = "../../locusfs-graph" }
niri-ipc = "=26.4.0"
serde_json = "1.0.145"
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync"] }
