[package]
name = "locusfs-plugin-pipewire"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
locusfs-graph = { path = "../../locusfs-graph" }
locusfs-plugin-api = { path = "../../locusfs-plugin-api" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "rt", "sync", "time"] }
toml = { workspace = true }
