[package]
name = "locusfs-plugin-pipewire"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
locusfs-graph = { path = "../../graph", default-features = false, features = ["dynamic", "provider-tracing", "watch-provider"] }
locusfs-plugin-api = { path = "../api" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "process", "rt", "sync", "time"] }
toml = { workspace = true }
