[package]
name = "locusfs-plugin-project"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
async-trait = { workspace = true }
locusfs-graph = { path = "../../graph", default-features = false, features = ["dynamic", "in-memory", "provider-tracing"] }
locusfs-plugin-api = { path = "../api" }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
